--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
     <title>CHECKMATE</title>
 </head>
 <body>
-    <!-- 체크메이트 네비바 -->
+    <!-- 네비바 -->
     <nav>
         <div>
             <img src="" alt="">
@@ -26,22 +26,20 @@
         </div>
         <img src="" alt=""> <!-- 메인화면 이미지 추가 -->
         <div class="option">
-            <div class="content">
-                <div class="menu-1">
-                    <h1 class="title">룸메이트 찾기</h1>
-                    <p class="detail">룸메이트 찾기를 등록한 사람들 중<br>나의 룸메를 찾아보세요</p>
+            <div class="menu-1">
+                <h1 class="title">룸메이트 찾기</h1>
+                <p class="detail">룸메이트 찾기를 등록한 사람들 중<br>나의 룸메를 찾아보세요</p>
+                <button class="button">
+                    <p>바로가기</p>
+                    <img src="" alt=""> <!-- 화살표 이미지 추가 -->
+                </button>
+                <div class="menu-2">
+                    <h1 class="title">정보공유하기</h1>
+                    <p class="detail">기숙사, 원룸 정보를 공유 해주세요</p>
                     <button class="button">
                         <p>바로가기</p>
                         <img src="" alt=""> <!-- 화살표 이미지 추가 -->
                     </button>
-                    <div class="menu-2">
-                        <h1 class="title">정보공유하기</h1>
-                        <p class="detail">기숙사, 원룸 정보를 공유 해주세요</p>
-                        <button class="button">
-                            <p>바로가기</p>
-                            <img src="" alt=""> <!-- 화살표 이미지 추가 -->
-                        </button>
-                </div>
             </div>
         </div>
     </div>
