--- a/main.html
+++ b/main.html
@@ -20,12 +20,14 @@
         <a href="">로그인</a>
     </nav>
     <div class="container">
-        <div class="content">
-            <h1 class="title">나와 딱 맞는<br>룸메이트 찾기</h1>
-            <p class="detail">설명설명설명<br>설명설명설명</p>
+        <div class="content-top">
+            <div class="text">
+                <h1 class="title">나와 딱 맞는<br>룸메이트 찾기</h1>
+                <p class="detail">설명설명설명<br>설명설명설명</p>
+            </div>
+            <img src="" alt=""> <!-- 메인화면 이미지 추가 -->
         </div>
-        <img src="" alt=""> <!-- 메인화면 이미지 추가 -->
-        <div class="option">
+        <div class="content-bottom">
             <div class="menu-1">
                 <h1 class="title">룸메이트 찾기</h1>
                 <p class="detail">룸메이트 찾기를 등록한 사람들 중<br>나의 룸메를 찾아보세요</p>
@@ -33,6 +35,7 @@
                     <p>바로가기</p>
                     <img src="" alt=""> <!-- 화살표 이미지 추가 -->
                 </button>
+            </div>
                 <div class="menu-2">
                     <h1 class="title">정보공유하기</h1>
                     <p class="detail">기숙사, 원룸 정보를 공유 해주세요</p>
@@ -40,12 +43,13 @@
                         <p>바로가기</p>
                         <img src="" alt=""> <!-- 화살표 이미지 추가 -->
                     </button>
+                </div>
             </div>
         </div>
     </div>
     <footer>
         <div class="title">
-            <p>문의처</p>
+            <p class="font-bold">문의처</p>
             <p>경상대학교 멋쟁이사자처럼</p>
         </div>
         <p class="tel">TEL | 055-1234-5678</p>
